# Rubiks-Solver

./: CMakeLists.txt
src/: main.cpp
src/graphics/: Animation.h  Meshes.cpp  Meshes.h  Renderer.cpp  Renderer.h
src/solver/: Benchmark.cpp  Solver.cpp  Solver.h  State.cpp  State.h
